--- a/package.json
+++ b/package.json
@@ -18,7 +18,24 @@
     "mysql": "^2.17.1",
     "node-xlsx": "^0.15.0",
     "nodemailer": "^6.3.1",
-    "oracledb": "^4.0.1"
+    "oracledb": "^4.0.1",
+    "@angular/animations": "~8.2.5",
+    "@angular/cdk": "~8.2.3",
+    "@angular/cli": "~8.3.4",
+    "@angular/common": "~8.2.5",
+    "@angular/compiler": "~8.2.5",
+    "@angular/compiler-cli": "~8.2.5",
+    "@angular/core": "~8.2.5",
+    "@angular/forms": "~8.2.5",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "~8.2.5",
+    "@angular/platform-browser-dynamic": "~8.2.5",
+    "@angular/router": "~8.2.5",
+    "angular": "^1.7.8",
+    "ngx-cookie-service": "^2.2.0",
+    "rxjs": "~6.4.0",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {}
 }
