--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "coen174project",
   "version": "0.0.0",
+  "engines": {
+    "node": "12.13.1",
+    "npm": "6.12.1"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -35,6 +39,7 @@
     "ngx-cookie-service": "^2.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "typescript": "~3.5.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {}
