--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "build": "ng build --prod --prefix dist",
-    "heroku-postbuild": "cd dist && ng build --prod"
+    "heroku-postbuild": "ng build --prod --prefix dist"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
