--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,16 +7,15 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.5",
     "@angular/cdk": "~8.2.3",
-    "@angular/cli": "~8.3.4",
     "@angular/common": "~8.2.5",
     "@angular/compiler": "~8.2.5",
-    "@angular/compiler-cli": "~8.2.5",
     "@angular/core": "~8.2.5",
     "@angular/forms": "~8.2.5",
     "@angular/material": "^8.2.3",
@@ -27,9 +26,14 @@
     "ngx-cookie-service": "^2.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "typescript": "~3.5.3",
     "zone.js": "~0.9.1",
+    "@angular/cli": "^1.0.1",
+    "@angular/compiler-cli": "^2.3.1",
+    "typescript": "^2.0.3"
+  },
+  "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.4",
+    "@angular/cli": "~8.3.4",
     "@angular/language-service": "~8.2.5",
     "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
@@ -46,6 +50,8 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0"
   },
-  "devDependencies": {
-  }
+    "engines": {
+    "node": "12.13.1",
+    "npm": "6.12.1"
+    }
 }
