--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
   "name": "coen174project",
   "version": "0.0.0",
-  "engines": {
-    "node": "12.13.1",
-    "npm": "6.12.1"
-  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build": "ng build --prod --prefix dist",
-    "heroku-postbuild": "cd dist & ng build --prod"
+    "postinstall": "ng build --aot --prod",
+    "heroku-postbuild": "cd frontend && npm install"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -22,41 +18,7 @@
     "mysql": "^2.17.1",
     "node-xlsx": "^0.15.0",
     "nodemailer": "^6.3.1",
-    "oracledb": "^4.0.1",
-    "@angular/animations": "~8.2.5",
-    "@angular/cdk": "~8.2.3",
-    "@angular/cli": "~8.3.4",
-    "@angular/common": "~8.2.5",
-    "@angular/compiler": "~8.2.5",
-    "@angular/compiler-cli": "~8.2.5",
-    "@angular/core": "~8.2.5",
-    "@angular/forms": "~8.2.5",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.5",
-    "@angular/platform-browser-dynamic": "~8.2.5",
-    "@angular/router": "~8.2.5",
-    "angular": "^1.7.8",
-    "ngx-cookie-service": "^2.2.0",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "typescript": "~3.5.3",
-    "zone.js": "~0.9.1",
-    "@angular-devkit/build-angular": "~0.803.4",
-    "@angular/language-service": "~8.2.5",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0"
+    "oracledb": "^4.0.1"
   },
   "devDependencies": {}
 }
