--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,10 +29,10 @@
     "zone.js": "~0.9.1",
     "@angular/cli": "^1.0.1",
     "@angular/compiler-cli": "^2.3.1",
-    "typescript": "^2.0.3"
+    "typescript": "^2.0.3",
+    "@angular-devkit/build-angular": "~0.803.4",
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.4",
     "@angular/cli": "~8.3.4",
     "@angular/language-service": "~8.2.5",
     "@types/node": "~8.9.4",
