--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,7 @@
     "@angular/cli": "^1.0.1",
     "@angular/compiler-cli": "^2.3.1",
     "typescript": "^2.0.3",
-    "@angular-devkit/build-angular": "~0.803.4",
+    "@angular-devkit/build-angular": "~0.803.4"
   },
   "devDependencies": {
     "@angular/cli": "~8.3.4",
