--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,9 +27,9 @@
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1",
-    "@angular/cli": "^1.0.1",
-    "@angular/compiler-cli": "^2.3.1",
-    "typescript": "^2.0.3",
+    "@angular/cli": "~8.3.4",
+    "@angular/compiler-cli": "~8.2.5",
+    "typescript": "~3.5.3",
     "@angular-devkit/build-angular": "~0.803.4"
   },
   "devDependencies": {
