--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "postbuild": "echo postbuild & cd frontend & npm install"
+    "postinstall": "echo postbuild & cd frontend & npm install"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
