--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "heroku-postbuild": "cd frontend && npm install"
+    "start": "node ./bin/www & cd frontend && npm install",
+    "poststart": "cd frontend && npm install"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
