--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng serve --proxy-config proxy.conf.json"
+    "postinstall": "ng build --aot --prod && node server.js"
   },
   "private": true,
   "dependencies": {
